# Constell

./: .env.dev.example  .eslintrc.cjs  .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  ROADMAP.md  docker-compose.dev.yml  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.agents/: ARCHITECTURE_PRINCIPLES.md  README.md
.github/workflows/: lint.yml  typecheck.yml  validate-pr-title.yml
docs/plans/: 2026-05-27-v0.7.0-beta-evaluations.md  2026-05-27-v0.8.0-beta-annotations.md
docs/specs/: 2026-05-25-constell-architecture-design.md  2026-05-27-v0.5.0-beta-metrics-analytics.md  2026-05-27-v0.7.0-beta-evaluations.md  2026-05-27-v0.8.0-beta-annotations.md  2026-05-28-v0.9.0-beta-datasets-experiments.md
docs/superpowers/plans/: 2026-05-25-v0.1.0-alpha-skeleton.md  2026-05-26-v0.3.0-alpha-tracing-phase-a.md  2026-05-26-v0.4.0-alpha-prompt-management.md  2026-05-28-v0.9.0-beta-datasets-experiments.md
docs/superpowers/specs/: 2026-05-26-v0.3.0-alpha-tracing-phase-a-design.md
ee/: AGENTS.md  package.json  tsconfig.json
ee/src/: index.ts
infra/: versions.env
scripts/: e2e-smoke.ts  postinstall.sh  seed-smoke.ts  setup.sh
sdk/python/: pyproject.toml
sdk/python/src/constell/: __init__.py  _batch_queue.py  client.py  prompt_client.py  types.py
sdk/python/tests/: test_batch_queue.py  test_prompt_client.py
sdk/typescript/: package.json  tsconfig.json
web/: AGENTS.md  next.config.ts  package.json  tsconfig.json  vitest.config.ts
web/src/pages/: _app.tsx  (+2 more)
worker/: AGENTS.md  package.json  tsconfig.json
worker/src/: app.ts
(+114 files in other folders)
